  rebuilt on top of these new optimized versions keeping all the legacy
  for compatibility reasons. These classes no more keep references to 
  SnmpEngine what makes them reusable with many SnmpEngine class instances.
- Oneliner GETBULK Command Generator now strips possible excessive OIDs
  off the bottom of returned var-binds table.
- Built-in debugging is now based on Python logging module.
- Example on a single Transport Dispatcher use with multiple SnmpEngine's
  in oneliner AsyncCommandGenerator & AsyncNotificationOriginator based
  applicatons added.
- Example script on transport timeout & retries manipulation added.
- Example script explaining incoming message's communityName re-mapping added.
- Some more examples on MIB lookup and use at oneliner CommandGenerator added.
- Broadcast socket option can now be enabled with the .enableBroadcast()
  call for any datagram-based transport (namely, UDP and UDP6).
- AbstractTransportDispatcher's jobStarted() and jobFinished() methods
  now accept optional 'count' parameter which is a way for an app to indicate
  how many responses are expected or have been processed in bulk.
- Example script on SNMP Agents UDP broadcast-based discovery added.
- Oneliner transport object now supports setLocalAddress() method to
  force socket binding to specified local interface.
- New public DgramSocketTransport.getLocalAddress() returns local endpoint
  address underlying BSD socket is currently bound to.
- Passing request details to access control callback at CommandResponder
  reworked towards more robust and simple design with the execution observer
  facility.
- MIB instrumentation example improved to cover table index building facility.
- Handle the case of null writer at Debug printer.
- Do not cache snmpEngineId & snmpAdminString at CommandGenerator to let it
  be reused with many different snmpEngines.
- TRAP PDU agent address evaluation at proto.api made lazy to improve
  startup time.